<resources>
    <string name="app_name">Gsund</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history">Histori</string>
    <string name="home">Home</string>
    <string name="tab_1">Profile</string>
    <string name="tab_2">Progress</string>
    <string name="profile">Profile</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="motto">Mulai Sehatmu Sekarang Juga</string>
    <string name="tinggi_badan">Tinggi Badan</string>
    <string name="berat_bedan">Berat Bedan</string>
    <string name="riwayat_penyakit">Riwayat Penyakit</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="masukan_umur">Masukan Umur</string>
    <string name="masukan_nama">Nama Lengkap</string>
    <string name="register">Register</string>
    <string name="gesund">Gesund</string>
    <string name="user_friendly">User Friendly</string>
    <string name="deskripsi_intro_1">Asisten Manusia Dalam Membuat Lifestyle nya sendiri terutama dalam hal menjaga tubuh mereka</string>
    <string name="all_in_one">All In One</string>
    <string name="deskripsi_intro_2">Semua Kemudahan tersedia di aplikasi Gesund,baik dalam segi fitur atupun pelayanan</string>
    <string name="deskripsi_intro_3">Semua fitur yang dibutuhkan anda sekarang telah tersedia di aplikasi Gesund, Ayo coba sekarang juga!</string>
    <string name="next">Next</string>
    <string name="txt_button_profile">Profile</string>
    <string name="txt_button_progress">Progress</string>
    <string name="sample_email">mori_nana@gmail.jp</string>
    <string name="sample_name">Mori Nana</string>
    <string name="profile_jenis_kelamin">Jenis Kelamin</string>
    <string name="profile_umur">Umur</string>
    <string name="profile_riwayat_penyakit">Riwayat Penyakit</string>
    <string name="isi_profile_name">Mori Nana</string>
    <string name="profile_tb">Tinggi Badan</string>
    <string name="profile_bb">Berat Badan</string>
    <string name="nilai_kekurangan_berat"><![CDATA[<18.50]]></string>
    <string name="nilai_ideal">18.50-24.99</string>
    <string name="nilai_gemuk">25.00-29.99</string>
    <string name="nilai_obesitas"><![CDATA[>30.00]]></string>
    <string name="job_start">Job Service is already scheduled</string>
    <string name="nama_panggilan">Nama Panggilan</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string-array name="item_intensitas_or">
        <item>low</item>
        <item>normal</item>
        <item>high</item>
    </string-array>
    <string name="text_panjang">Ini adalah satu dari sekian banyak tips yang bisa kami sajikan , informasi ini merupakan data dari kami yang merupakan data DUMMY(percobaan) ,Ini adalah satu dari sekian banyak tips yang bisa kami sajikan , informasi ini merupakan data dari kami yang merupakan data DUMMY(percobaan) ,Ini adalah satu dari sekian banyak tips yang bisa kami sajikan , informasi ini merupakan data dari kami yang merupakan data DUMMY(percobaan) ,Ini adalah satu dari sekian banyak tips yang bisa kami sajikan , informasi ini merupakan data dari kami yang merupakan data DUMMY(percobaan) ,Ini adalah satu dari sekian banyak tips yang bisa kami sajikan , informasi ini merupakan data dari kami yang merupakan data DUMMY(percobaan) , </string>
</resources>
