<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <View
        android:id="@+id/cv_profile"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="88dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true"
        android:elevation="10dp"
        >

    </View>

    <TextView
        android:id="@+id/tv_kurus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="4dp"
        android:background="@drawable/button_blue"
        android:fontFamily="@font/notosans_bold"
        android:text="@string/nilai_kekurangan_berat"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_ideal"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_ideal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/notosans_bold"
        android:text="@string/nilai_ideal"
        android:textSize="16sp"
        android:padding="4dp"
        android:background="@drawable/button_green"
        app:layout_constraintEnd_toStartOf="@+id/tv_gemuk"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_gemuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/notosans_bold"
        android:text="@string/nilai_gemuk"
        android:padding="4dp"
        android:background="@drawable/button_yellow"
        android:textSize="16sp"

        app:layout_constraintEnd_toStartOf="@+id/tv_obesitas"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_obesitas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_orange"
        android:fontFamily="@font/notosans_bold"
        android:padding="4dp"
        android:text="@string/nilai_obesitas"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/cv_profile"
        app:layout_constraintTop_toTopOf="parent" />


    <com.anychart.AnyChartView
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/aktivitas"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/aktivitas"
        android:elevation="12dp"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/tv_ideal"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="40dp"
        android:layout_height="120dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/gambar_aktivitas"
                android:layout_width="90dp"
                android:layout_height="20dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="30dp"
                android:src="@drawable/pic_run"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="45dp"
                android:layout_toEndOf="@id/gambar_aktivitas"
                android:text="Lari 2KM"
                android:textSize="18sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>