<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.profile.ProfileActivity">

        <ImageView
            android:id="@+id/setting"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_gravity="end"
            android:layout_margin="@dimen/_8sdp"
            android:src="@drawable/ic_settings_black_24dp" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/picture_profile"
            android:layout_width="@dimen/_96sdp"
            android:layout_height="@dimen/_96sdp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_16sdp" />

        <mobi.gspd.segmentedbarview.SegmentedBarView
            android:id="@+id/bar_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_16sdp"
            app:sbv_bar_height="@dimen/_24sdp"
            app:sbv_empty_segment_text="No segments"
            app:sbv_segment_text_size="12sp"
            app:sbv_show_description_text="true"
            app:sbv_side_style="rounded"
            app:sbv_side_text_style="oneSided"
            app:sbv_value_sign_height="30dp"
            app:sbv_value_sign_round="5dp"
            app:sbv_value_sign_width="@dimen/_40sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_16sdp">

            <TextView
                android:id="@+id/judulnama"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Nama Lengkap"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:id="@+id/profil_nama"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:fontFamily="@font/notosans_regular"
                android:gravity="end"
                android:text="@string/isi_profile_name"
                android:textColor="#111"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_16sdp">

            <TextView
                android:id="@+id/judulnamapanggilan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Nama Panggilan"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:id="@+id/profil_nama_panggilan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/notosans_regular"
                android:gravity="end"
                android:maxLines="1"
                android:text="@string/isi_profile_name"
                android:textColor="#111"
                android:textSize="20sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_16sdp">

            <TextView
                android:id="@+id/judul_tb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile_tb"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:id="@+id/profil_tb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/notosans_regular"
                android:maxLines="1"
                android:gravity="end"
                android:text="154 CM"
                android:textColor="#111"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_16sdp">

            <TextView
                android:id="@+id/judul_bb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile_bb"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:id="@+id/profil_bb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/notosans_regular"
                android:maxLines="1"
                android:gravity="end"
                android:text="48KG"
                android:textColor="#111"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_16sdp">

            <TextView
                android:id="@+id/judul_jenkel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile_jenis_kelamin"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:id="@+id/profil_jenkel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/notosans_regular"
                android:maxLines="1"
                android:gravity="end"
                android:text="Perempuan"
                android:textColor="#111"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_16sdp">

            <TextView
                android:id="@+id/judul_penyakit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Tidak Ada"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:id="@+id/profil_penyakit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/notosans_regular"
                android:gravity="end"
                android:text="@string/profile_riwayat_penyakit"
                android:maxLines="1"
                android:textColor="#111"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_16sdp">

            <TextView
                android:id="@+id/judul_umur"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile_umur"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:id="@+id/profil_umur"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/notosans_regular"
                android:gravity="end"
                android:text="18"
                android:maxLines="1"
                android:textColor="#111"
                android:textSize="20sp"/>

        </LinearLayout>

        <Button
            android:id="@+id/update_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:text="Ubah Data"
            android:textColor="@color/putih"
            android:background="@drawable/button_rounded_red" />

    </LinearLayout>
</ScrollView>