<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileActivity">


    <ImageView
        android:id="@+id/image_backdrop"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:tint="#8000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        />

    <ImageView
        android:id="@+id/setting"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/_8sdp"
        app:layout_constraintTop_toTopOf="parent"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/picture_profile"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_profile"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="58dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true"
        app:cardUseCompatPadding="true"
        android:elevation="2dp"
        app:cardCornerRadius="7dp">

        <TextView
            android:id="@+id/name_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/notosans_bold"
            android:layout_marginTop="40dp"
            android:text="@string/sample_name"
            android:textSize="15sp"
            android:textStyle="bold" />



    </androidx.cardview.widget.CardView>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cv_profile">

        <LinearLayout
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".ui.profile.ProfileActivity">

            <TextView
                android:id="@+id/judulnama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/notosans_bold"
                android:text="Nama Lengkap"
                android:textColor="#111"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:textStyle="bold"
                android:textSize="@dimen/_14ssp"
                android:id="@+id/profil_nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isi_profile_name"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/judulnama"
                app:layout_constraintTop_toBottomOf="@+id/judulnama" />

            <TextView
                android:id="@+id/judulnamapanggilan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/notosans_bold"
                android:text="Nama Panggilan"
                android:textColor="#111"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:id="@+id/profil_nama_panggilan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isi_profile_name"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/judulnamapanggilan"
                app:layout_constraintTop_toBottomOf="@+id/judulnamapanggilan" />

            <TextView
                android:id="@+id/judul_tb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/notosans_bold"
                android:text="@string/profile_tb"
                android:textColor="#111"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintStart_toStartOf="@+id/judulnama"
                app:layout_constraintTop_toBottomOf="@+id/judulnama" />

            <TextView
                android:id="@+id/profil_tb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="154 CM"
                android:textStyle="bold"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintHorizontal_bias="0.513"
                app:layout_constraintStart_toStartOf="@+id/judul_tb"
                app:layout_constraintTop_toBottomOf="@+id/judul_tb" />
            <TextView
                android:id="@+id/judul_bb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/notosans_bold"
                android:text="@string/profile_bb"
                android:textColor="#111"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profil_bb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="48KG"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/judul_bb"
                app:layout_constraintStart_toStartOf="@+id/judul_bb"
                app:layout_constraintTop_toBottomOf="@+id/judul_bb" />



            <TextView
                android:id="@+id/judul_jenkel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/notosans_bold"
                android:text="@string/profile_jenis_kelamin"
                android:textColor="#111"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/judul_umur"
                app:layout_constraintTop_toBottomOf="@+id/judul_umur" />

            <TextView
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:id="@+id/profil_jenkel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Perempuan"
                app:layout_constraintStart_toStartOf="@+id/judul_jenkel"
                app:layout_constraintTop_toBottomOf="@+id/judul_jenkel" />

            <TextView
                android:id="@+id/judul_penyakit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/notosans_bold"
                android:text="@string/profile_riwayat_penyakit"
                android:textColor="#111"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/judul_tb"
                app:layout_constraintTop_toBottomOf="@+id/profil_tb" />

            <TextView
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:id="@+id/profil_penyakit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tidak Ada"
                app:layout_constraintStart_toStartOf="@+id/judul_penyakit"
                app:layout_constraintTop_toBottomOf="@+id/judul_penyakit" />

            <TextView
                android:id="@+id/judul_umur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/notosans_bold"
                android:text="@string/profile_umur"
                android:textColor="#111"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/judul_penyakit"
                app:layout_constraintTop_toBottomOf="@+id/judul_penyakit" />


            <TextView
                android:textStyle="bold"
                android:textSize="@dimen/_14ssp"
                android:id="@+id/profil_umur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="18"
                app:layout_constraintStart_toStartOf="@+id/judul_umur"
                app:layout_constraintTop_toBottomOf="@+id/judul_umur" />


            <Button
                android:id="@+id/btn_ubahdata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_rounded_red"
                android:fontFamily="@font/notosans_bold"
                android:text="Ubah Data"
                android:textAllCaps="false"
                android:textColor="@color/putih"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>